force-app/main/default/objects/Class_Team_Member__c/Class_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Class Team Member</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>