force-app/main/default/objects/Class_Team_Member__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
                <default>true</default>
                <label>Read</label>
            </value>
            <value>
                <fullName>Edit</fullName>
                <label>Read/Edit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>